# WebScraper

./: MANIFEST.in  README.md  gui.py  index.html  pyproject.toml
