[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoytdownload"
version = "1.0.0"
description = "A high-performance GUI for downloading YouTube videos."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "yt-dlp",
    "Pillow",
]
authors = [
    {name = "Enes Yali"}
]

[project.scripts]
auto-yt-dl = "gui:main"

[tool.setuptools]
py-modules = ["gui"]
include-package-data = true